--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     root /var/www/html/src/Main;
     index index.php index.html;
+    server_name server;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
